flutter定位页面修改 html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="设备位置信息上报系统">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 强制使用 HTML（文件体积小，加载快） -->
+   <meta name="flutter.web.rendering.strategy" content="html">
 
   <!-- 高德地图 JS API -->
   <script type="text/javascript">
